--- a/public/02-catalog-item.html
+++ b/public/02-catalog-item.html
@@ -130,6 +130,115 @@
 					<h1>Триммерный корд Husqvarna Opti Round 1%2C5 мм/15 м в блистере 5976688-01</h1>
 				</div>
 			</div>
+			<!-- start sProductItem-->
+			<section class="sProductItem section" id="sProductItem">
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-lg-6">
+							<div class="sProductItem__slider-wrap">
+								<div class="sProductItem__slider-thumbs sProductItem__slider-thumbs--js swiper">
+									<div class="swiper-wrapper">
+										<div class="swiper-slide">
+											<div class="sProductItem__img-wrap"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+											</div>
+										</div>
+										<div class="swiper-slide">
+											<div class="sProductItem__img-wrap"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+											</div>
+										</div>
+										<div class="swiper-slide">
+											<div class="sProductItem__img-wrap"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sProductItem__slider sProductItem__slider--js swiper">
+									<div class="swiper-wrapper">
+										<div class="swiper-slide"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="swiper-slide"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="swiper-slide"><img src="img/sProductItem-img-1.png" alt="" loading="lazy"/>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-lg-3">
+							<div class="sProductItem__info-wrap">
+								<table>
+									<tbody>
+										<tr>
+											<td>
+												<p>Рейтинг:</p>
+											</td>
+											<td>
+												<div class="rating-info">
+													<div class="rating-info__stars">
+														<svg class="icon icon-star ">
+															<use xlink:href="img/svg/sprite.svg#star"></use>
+														</svg>
+														<svg class="icon icon-star ">
+															<use xlink:href="img/svg/sprite.svg#star"></use>
+														</svg>
+														<svg class="icon icon-star ">
+															<use xlink:href="img/svg/sprite.svg#star"></use>
+														</svg>
+														<svg class="icon icon-star ">
+															<use xlink:href="img/svg/sprite.svg#star"></use>
+														</svg>
+														<svg class="icon icon-star ">
+															<use xlink:href="img/svg/sprite.svg#star"></use>
+														</svg><span>(0)</span>
+													</div>
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<p>Производитель:</p>
+											</td>
+											<td><a href="#">Husqvarna</a></td>
+										</tr>
+										<tr>
+											<td>
+												<p>Артикул:</p>
+											</td>
+											<td>
+												<p>5976688-01</p>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<p>Цена:</p>
+											</td>
+											<td>
+												<p class="price">199 руб.</p>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<div class="addBlock">
+													<button class="addBlock__btn addBlock__btn--minus" type="button">
+													</button>
+													<input type="text" value="1"/>
+													<button class="addBlock__btn addBlock__btn--plus" type="button">
+													</button>
+												</div>
+											</td>
+											<td></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="sProductItem__info-wrap">
+							</div>
+						</div>
+						<div class="col-6 col-lg-3"></div>
+					</div>
+				</div>
+			</section>
+			<!-- end sProductItem-->
 			<!-- start sProductDesc-->
 			<div class="sProductDesc" id="sProductDesc">
 				<div class="container">
@@ -219,8 +328,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -236,8 +345,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -274,8 +381,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -291,8 +398,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -329,8 +434,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -346,8 +451,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -384,8 +487,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -401,8 +504,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -439,8 +540,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -456,8 +557,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -500,8 +599,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -517,8 +616,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -561,8 +658,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -578,8 +675,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -622,8 +717,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -639,8 +734,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -683,8 +776,8 @@
 												<div class="product-card">
 													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 													</div>
-													<div class="product-card__rating-info">
-														<div class="product-card__stars">
+													<div class="rating-info">
+														<div class="rating-info__stars">
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg>
@@ -700,8 +793,6 @@
 															<svg class="icon icon-star ">
 																<use xlink:href="img/svg/sprite.svg#star"></use>
 															</svg><span>(0)</span>
-														</div>
-														<div class="product-card__item-number">5004754
 														</div>
 													</div>
 													<a class="product-card__title-link" href="#">
@@ -795,8 +886,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -812,8 +903,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -856,8 +945,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -873,8 +962,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -917,8 +1004,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -934,8 +1021,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -978,8 +1063,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -995,8 +1080,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -1039,8 +1122,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -1056,8 +1139,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -1100,8 +1181,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -1117,8 +1198,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -1161,8 +1240,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -1178,8 +1257,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -1222,8 +1299,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -1239,8 +1316,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
@@ -1283,8 +1358,8 @@
 								<div class="product-card">
 									<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 									</div>
-									<div class="product-card__rating-info">
-										<div class="product-card__stars">
+									<div class="rating-info">
+										<div class="rating-info__stars">
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg>
@@ -1300,8 +1375,6 @@
 											<svg class="icon icon-star ">
 												<use xlink:href="img/svg/sprite.svg#star"></use>
 											</svg><span>(0)</span>
-										</div>
-										<div class="product-card__item-number">5004754
 										</div>
 									</div>
 									<a class="product-card__title-link" href="#">
