--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -128,9 +128,9 @@
 			</div>
 			<!-- start sAllCategories-->
 			<section class="sAllCategories section" id="sAllCategories">
-				<div class="container sliderAutoWidthWrap">
+				<div class="sAllCategories__container container sliderAutoWidthWrap">
 					<div class="row">
-						<div class="col-10">
+						<div class="sAllCategories__col-slider col-12 col-sm-10">
 							<div class="sliderCategotiesLinks sliderCategotiesLinks--js swiper">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
@@ -184,7 +184,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="sAllCategories__col-btn col">
 							<button class="sAllCategories__toggle" data-open="Все категории" data-close="Скрыть"> Все категории
 							</button>
 						</div>
@@ -333,8 +333,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -350,8 +350,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -394,8 +392,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -411,8 +409,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -455,8 +451,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -472,8 +468,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -516,8 +510,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -533,8 +527,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -577,8 +569,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -594,8 +586,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -638,8 +628,8 @@
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
-										<div class="product-card__rating-info">
-											<div class="product-card__stars">
+										<div class="rating-info">
+											<div class="rating-info__stars">
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg>
@@ -655,8 +645,6 @@
 												<svg class="icon icon-star ">
 													<use xlink:href="img/svg/sprite.svg#star"></use>
 												</svg><span>(0)</span>
-											</div>
-											<div class="product-card__item-number">5004754
 											</div>
 										</div>
 										<a class="product-card__title-link" href="#">
@@ -920,9 +908,9 @@
 			<!-- end sMainCategories-->
 			<!-- start sAllCategories-->
 			<section class="sAllCategories section" id="sAllCategories">
-				<div class="container sliderAutoWidthWrap">
+				<div class="sAllCategories__container container sliderAutoWidthWrap">
 					<div class="row">
-						<div class="col-10">
+						<div class="sAllCategories__col-slider col-12 col-sm-10">
 							<div class="sliderCategotiesLinks sliderCategotiesLinks--js swiper">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
@@ -976,7 +964,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
+						<div class="sAllCategories__col-btn col">
 							<button class="sAllCategories__toggle" data-open="Все категории" data-close="Скрыть"> Все категории
 							</button>
 						</div>
