--- a/public/12-favorits.html
+++ b/public/12-favorits.html
@@ -144,8 +144,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -161,8 +161,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -203,8 +201,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -220,8 +218,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -262,8 +258,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -279,8 +275,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -321,8 +315,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -338,8 +332,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -380,8 +372,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -397,8 +389,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -439,8 +429,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -456,8 +446,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -498,8 +486,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -515,8 +503,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
@@ -557,8 +543,8 @@
 							<div class="product-card">
 								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 								</div>
-								<div class="product-card__rating-info">
-									<div class="product-card__stars">
+								<div class="rating-info">
+									<div class="rating-info__stars">
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg>
@@ -574,8 +560,6 @@
 										<svg class="icon icon-star ">
 											<use xlink:href="img/svg/sprite.svg#star"></use>
 										</svg><span>(0)</span>
-									</div>
-									<div class="product-card__item-number">5004754
 									</div>
 								</div>
 								<a class="product-card__title-link" href="#">
